# table-service

./: .pre-commit-config.yaml  makefile  manage.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 134e03c50854_.py  32a164187b23_.py  38e39c9b294e_.py  8158ce8e9985_.py  c046f4bdcc2b_.py
api/: api.py  schema.py  utils.py
app/: database.py  main.py  settings.py
app/models/: __init__.py  mixins.py  order.py  product.py  table.py
app/schemas/: __init__.py  mixins.py  product.py
chat/: apps.py  consumers.py  routing.py  urls.py  views.py
front-end/: package.json
front-end/public/: index.html
front-end/src/: App.js  Theme.js  index.js  utils.js
orders/: admin.py  api.py  apps.py  models.py  schemas.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_auto_20210619_1518.py  0002_auto_20210622_2046.py  0003_alter_order_state.py  0004_auto_20210623_0726.py  0005_auto_20210623_0756.py  0006_alter_order_state.py  0007_order_user.py  0007_order_user_squashed_0008_alter_order_user.py  0008_alter_order_user.py
products/: admin.py  api.py  apps.py  models.py  schemas.py
products/migrations/: 0001_initial.py  0002_auto_20210619_0749.py  0003_alter_category_options.py
service/: admin.py  api.py  apps.py  models.py  schemas.py
service/migrations/: 0001_initial.py  (+2 more)
tables/: api.py  apps.py  models.py  schemas.py
tableservice/: api.py  asgi.py  auth.py  modelMixins.py  settingModel.py  settings.py  urls.py  wsgi.py
templates/: base.html
(+13 files in other folders)
